[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/341.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Platform/Platform.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Platform/CollisionChecker.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 8 )

[node name="Platform" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
collision/safe_margin = 2.0
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 8 )
texture = ExtResource( 1 )

[node name="Debug" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 32.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 8 )
shape = SubResource( 1 )
one_way_collision = true

[node name="CollisionChecker" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 4
collision/safe_margin = 2.0
motion/sync_to_physics = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionChecker"]
position = Vector2( 16, 8 )
shape = SubResource( 2 )

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
visible = false
position = Vector2( 16, 8 )
shape = SubResource( 3 )
[connection signal="block_collision" from="CollisionChecker" to="." method="on_block_collision"]
[connection signal="body_entered" from="GrabArea" to="." method="_on_GrabArea_body_entered"]
[connection signal="body_exited" from="GrabArea" to="." method="_on_GrabArea_body_exited"]
